[package]
name = "lux"
version = "0.1.0"
edition = "2021"
authors = ["AnActualEmerald"]
description = "A small CLI app for looking up League of Legends stats"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "3.1.18", features = ["derive"] }
directories = "4.0.1"
dotenv = "0.15.0"
riven = "2.7.0"
ron = "0.7.0"
serde = { version = "1.0.137", features = ["derive"] }
